--- a/app/views/steps/_form.html.erb
+++ b/app/views/steps/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.number_field :user_id, id: :step_user_id %>
   </div>
 
+  <div class="field">
+    <%= form.label :date %>
+    <%= form.date_select :date, id: :step_user_id %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
