--- a/app/views/steps/index.html.erb
+++ b/app/views/steps/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Description</th>
       <th>User</th>
+      <th>Date</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= step.description %></td>
         <td><%= step.user_id %></td>
+        <te><%= step.date %></td>
         <td><%= link_to 'Show', step %></td>
         <td><%= link_to 'Edit', edit_step_path(step) %></td>
         <td><%= link_to 'Destroy', step, method: :delete, data: { confirm: 'Are you sure?' } %></td>
