Adjust around to add column

--- a/app/views/steps/index.html.erb
+++ b/app/views/steps/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= step.description %></td>
         <td><%= step.user_id %></td>
-        <te><%= step.date %></td>
+        <td><%= step.date %></td>
         <td><%= link_to 'Show', step %></td>
         <td><%= link_to 'Edit', edit_step_path(step) %></td>
         <td><%= link_to 'Destroy', step, method: :delete, data: { confirm: 'Are you sure?' } %></td>
