--- a/app/views/steps/_form.html.erb
+++ b/app/views/steps/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :date %>
-    <%= form.date_select :date, id: :step_user_id %>
+    <%= form.date_select :date, id: :step_date %>
   </div>
 
   <div class="actions">
