--- a/app/views/steps/show.html.erb
+++ b/app/views/steps/show.html.erb
@@ -10,5 +10,10 @@
   <%= @step.user_id %>
 </p>
 
+<p>
+  <strong>Date:</strong>
+  <%= @step.date %>
+</p>
+
 <%= link_to 'Edit', edit_step_path(@step) %> |
 <%= link_to 'Back', steps_path %>
