--- a/app/views/steps/edit.html.erb
+++ b/app/views/steps/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Step</h1>
-
-<%= render 'form', step: @step %>
-
-<%= link_to 'Show', @step %> |
-<%= link_to 'Back', steps_path %>
+<%- model_class = Step -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
