--- a/app/views/steps/new.html.erb
+++ b/app/views/steps/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Step</h1>
-
-<%= render 'form', step: @step %>
-
-<%= link_to 'Back', steps_path %>
+<%- model_class = Step -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
